# ideasoft_live

./: .gitignore  pyproject.toml
ideasoft_live/: main.py
